fix: white space

--- a/css/style.css
+++ b/css/style.css
@@ -220,7 +220,8 @@ h3 {
   min-width: 1100px;
   max-width: 1400px;
   width: 100%;
-  padding: 0; /* Remova o padding geral do menu */
+  padding: 0;
+  margin-top: -2px; /* erro de hover */
   z-index: 1000;
   opacity: 0;
   visibility: hidden;
